# DL_Taller2

./: README.md  pyproject.toml
Code/: 01_descarga_comprension_dataset.ipynb  02_primer_modelo.ipynb  03_segundo_modelo.ipynb
data/artifacts/: class_mapping.json  dataset_summary.json  test_split.csv  train_split.csv
results/: model1_classification_report.csv  model1_confusion_matrix.npy  model1_history.csv  model1_metrics.csv  model2_classification_report.csv  model2_confusion_matrix.npy  model2_history.csv  model2_metrics.csv
