[project]
name = "dl-taller2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kaggle>=2.0.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
